fix path to Dockerfile in ci-example

--- a/ci-example/Jenkinsfile
+++ b/ci-example/Jenkinsfile
@@ -27,7 +27,7 @@ pipeline {
                       --build-arg MYSQL_DATABASE=${params.MYSQL_DATABASE} \
                       --build-arg MYSQL_USER=${params.MYSQL_USER} \
                       --build-arg MYSQL_PASSWORD=${params.MYSQL_PASSWORD} \
-                      .
+                      ci-example/.
                     """
                 }
             }
