--- a/ci-example/Jenkinsfile
+++ b/ci-example/Jenkinsfile
@@ -1,6 +1,11 @@
 pipeline {
-    agent any
-
+    agent {
+        docker {
+            image 'docker:latest'
+            args '-v /var/run/docker.sock:/var/run/docker.sock'
+        }
+    }
+    
     tools {
         dockerTool 'docker-lab'
     }
