change docker agent in ci

--- a/ci-example/Jenkinsfile
+++ b/ci-example/Jenkinsfile
@@ -1,11 +1,11 @@
 pipeline {
     agent {
         docker {
-            image 'docker:latest'
+            image 'jenkinsci/jnlp-agent-docker'
             args '-v /var/run/docker.sock:/var/run/docker.sock'
         }
     }
-    
+
     tools {
         dockerTool 'docker-lab'
     }
