change docker to podman

--- a/ci-example/Jenkinsfile
+++ b/ci-example/Jenkinsfile
@@ -1,13 +1,6 @@
 pipeline {
     agent {
-        docker {
-            image 'jenkinsci/jnlp-agent-docker'
-            args '-v /var/run/docker.sock:/var/run/docker.sock'
-        }
-    }
-
-    tools {
-        dockerTool 'docker-lab'
+        label 'ssh-agent'
     }
 
     environment {
@@ -15,7 +8,7 @@ pipeline {
     }
 
     parameters {
-        string(name: 'VERSION', defaultValue: 'latest', description: 'Tag for the Docker image')
+        string(name: 'VERSION', defaultValue: 'latest', description: 'Tag for the Container image')
         string(name: 'MYSQL_ROOT_PASSWORD', defaultValue: 'rootpassword', description: 'Root password for MySQL')
         string(name: 'MYSQL_DATABASE', defaultValue: 'developer_db', description: 'Database name for MySQL')
         string(name: 'MYSQL_USER', defaultValue: 'developer', description: 'User name for MySQL')
@@ -23,11 +16,11 @@ pipeline {
     }
 
     stages {
-        stage('Build Docker Image') {
+        stage('Build Container Image') {
             steps {
                 script {
                     sh """
-                    docker build -t debian-mysql:${params.VERSION} \
+                    podman build -t debian-mysql:${params.VERSION} \
                       --build-arg MYSQL_ROOT_PASSWORD=${params.MYSQL_ROOT_PASSWORD} \
                       --build-arg MYSQL_DATABASE=${params.MYSQL_DATABASE} \
                       --build-arg MYSQL_USER=${params.MYSQL_USER} \
@@ -37,14 +30,14 @@ pipeline {
                 }
             }
         }
-        stage('Push Docker Image to Quay') {
+        stage('Push Container Image to Quay') {
             steps {
                 script {
                     withCredentials([usernamePassword(credentialsId: "${env.REGISTRY_CREDENTIALS_ID}", usernameVariable: 'REGISTRY_USERNAME', passwordVariable: 'REGISTRY_PASSWORD')]) {
                         sh """
-                        echo ${REGISTRY_PASSWORD} | docker login -u ${REGISTRY_USERNAME} --password-stdin quay.io
-                        docker tag debian-mysql:${params.VERSION} quay.io/${REGISTRY_USERNAME}/debian-mysql:${params.VERSION}
-                        docker push quay.io/${REGISTRY_USERNAME}/debian-mysql:${params.VERSION}
+                        echo ${REGISTRY_PASSWORD} | podman login -u ${REGISTRY_USERNAME} --password-stdin quay.io
+                        podman tag debian-mysql:${params.VERSION} quay.io/${REGISTRY_USERNAME}/debian-mysql:${params.VERSION}
+                        podman push quay.io/${REGISTRY_USERNAME}/debian-mysql:${params.VERSION}
                         """
                     }
                 }
