modify example app

--- a/k8s-resources/nginx-deploy.yml
+++ b/k8s-resources/nginx-deploy.yml
@@ -13,11 +13,15 @@ spec:
       labels:
         app: nginx
     spec:
+      initContainers:
+      - name: init-sleep
+        image: busybox
+        command: ['sh', '-c', 'echo "Sleeping for 20 seconds..."; sleep 20']
       containers:
       - name: nginx
-        image: nginx:latest
+        image: nginxinc/nginx-unprivileged
         ports:
-        - containerPort: 80
+        - containerPort: 8080
         volumeMounts:
         - name: html-volume
           mountPath: /usr/share/nginx/html
