--- a/k8s-resources/nginx-deploy.yml
+++ b/k8s-resources/nginx-deploy.yml
@@ -12,6 +12,8 @@ spec:
     metadata:
       labels:
         app: nginx
+      annotations:
+        last-restart: "2024-06-19T12:00:00Z"
     spec:
       initContainers:
       - name: init-sleep
