--- a/complete-app-deploy/ocp-manifests/config/secret.yml
+++ b/complete-app-deploy/ocp-manifests/config/secret.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mysql-env-secret
-  namespace: developer-workspace
+  namespace: student-workspace
 type: Opaque
 stringData:
   MYSQL_ROOT_PASSWORD: "toor"
