--- a/complete-app-deploy/ocp-manifests/deploy/hpa.yml
+++ b/complete-app-deploy/ocp-manifests/deploy/hpa.yml
@@ -2,7 +2,7 @@ apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
   name: mysql-hpa
-  namespace: developer-workspace
+  namespace: student-workspace
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
