--- a/complete-app-deploy/ocp-manifests/namespace/resourceQuota.yml
+++ b/complete-app-deploy/ocp-manifests/namespace/resourceQuota.yml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ResourceQuota
 metadata:
-  name: developer-quota
-  namespace: developer-workspace
+  name: student-quota
+  namespace: student-workspace
 spec:
   hard:
     requests.cpu: "2"
