--- a/complete-app-deploy/ocp-manifests/namespace/roleBinding.yml
+++ b/complete-app-deploy/ocp-manifests/namespace/roleBinding.yml
@@ -1,11 +1,11 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: developer-admin-binding
-  namespace: developer-workspace
+  name: student-admin-binding
+  namespace: student-workspace
 subjects:
   - kind: User
-    name: developer
+    name: student
     apiGroup: rbac.authorization.k8s.io
 roleRef:
   kind: Role
