--- a/complete-app-deploy/ocp-manifests/registry/pullSecret-cfg.yml
+++ b/complete-app-deploy/ocp-manifests/registry/pullSecret-cfg.yml
@@ -5,5 +5,5 @@ kind: Secret
 metadata:
   creationTimestamp: null
   name: quayio-pull-secret
-  namespace: developer-workspace
+  namespace: student-workspace
 type: kubernetes.io/dockercfg
