--- a/complete-app-deploy/ocp-manifests/service/service-nodeport.yml
+++ b/complete-app-deploy/ocp-manifests/service/service-nodeport.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mysql-service
-  namespace: developer-workspace
+  namespace: student-workspace
 spec:
   type: NodePort
   selector:
