--- a/k8s-resources/nginx-pvc.yml
+++ b/k8s-resources/nginx-pvc.yml
@@ -4,6 +4,7 @@ metadata:
   name: nginx-pvc
   namespace: webapp
 spec:
+  storageClassName: vsphere-csi
   accessModes:
     - ReadWriteOnce
   resources:
