--- a/k8s-resources/nginx-deploy.yml
+++ b/k8s-resources/nginx-deploy.yml
@@ -19,6 +19,12 @@ spec:
       - name: init-sleep
         image: busybox
         command: ['sh', '-c', 'echo "Sleeping for 20 seconds..."; sleep 20']
+      - name: init-permissions
+        image: busybox
+        command: ["sh", "-c", "chown -R 101:101 /usr/share/nginx/html"]
+        volumeMounts:
+        - name: html-volume
+          mountPath: /usr/share/nginx/html
       containers:
       - name: nginx
         image: nginxinc/nginx-unprivileged
